--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@ html, body {
 .button{
     padding: 20px;
     margin: 0 3px;
+    width: 66px;
     border: 2px solid black;
     border-radius: 9px;
     cursor: pointer;
@@ -19,11 +20,12 @@ html, body {
 }
 
 .row input{
-   font-size: 20px; 
-   margin: 0;
-   padding: 10px 0px; 
-   border: 2px solid black;
-   border-radius: 5px;
-   /* width: 230px;
-   height: 25px; */
+    width: 290px;
+    font-size: 20px; 
+    margin: 0;
+    padding: 10px 0px; 
+    border: 2px solid black;
+    border-radius: 5px;
+    /* width: 230px;
+    height: 25px; */
 }
